# elkomplex

./: LICENSE  README.md  pyproject.toml
src/elkomplex/: __init__.py  komplex.py
tests/: __init__.py  test_komplex.py
